--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
   "scripts": { "test": "nodemjs test/all.mjs" },
   "directories": { "test": "test" },
 
-  "dependencies": {},
+  "dependencies": {
+    "concise-value-preview-pmb": "^0.1.1",
+    "objpop": "^0.1.3",
+    "typechecks-pmb": "^0.200620.3"
+  },
   "devDependencies": {
     "nodemjs": "^0.1.8"
   },
