--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { "name": "ubborg-restype-util-pmb",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Utility collection for creating ubborg resource types.",
   "keywords": [],
 
@@ -16,19 +16,24 @@
 
   "private": false, "license": "ISC",
 
-  "main": "util.mjs",
-  "scripts": { "test": "nodemjs test/all.mjs" },
+  "main": "src/dummy.mjs",
+  "scripts": { "test": "elp && nodemjs test/all.mjs" },
   "directories": { "test": "test" },
+  "eslintConfig": { "extends": "nodejs-pmb" },
 
   "dependencies": {
     "concise-value-preview-pmb": "^0.1.1",
-    "objpop": "^0.1.3",
-    "typechecks-pmb": "^0.200620.3"
+    "objpop": "^0.3.6",
+    "typechecks-pmb": "^0.240627.1"
   },
   "devDependencies": {
-    "nodemjs": "^0.1.8"
+    "eslint-config-nodejs-pmb": "^0.3.8",
+    "eslint-plugin-json-light-pmb": "^1.0.7",
+    "eslint-plugin-n": "^17.16.2",
+    "eslint-pretty-pmb": "^1.0.7",
+    "nodemjs": "^0.1.16"
   },
 
 
-  "npm vs. BOM = Unexpected token": "-*- coding: UTF-8 -*-"
+  "engines": { "npm": ">=7.0.0", "node": ">=16.0.0" }
 }
